# trustlist-core

./: .editorconfig  .gitignore  .gitleaks.toml  README.md  docker-compose.dev.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
auth/: README.md
auth/trustlist_auth/: __init__.py  audit.py  errors.py  fake_provider.py  passwords.py  provider.py  rbac.py  role_store.py  service.py  testing.py  tokens.py  totp.py
ci/: README.md  check_license_headers.py  license-header.txt
data-model/: README.md  alembic.ini
data-model/migrations/: env.py  script.py.mako
data-model/migrations/versions/: 0001_create_canonical_data_model.py
data-model/trustlist_data_model/: __init__.py  models.py
docs/: README.md  local-development.md
event-bus-sdk/: README.md
event-bus-sdk/trustlist_event_bus/: __init__.py  admin.py  config.py  consumer.py  envelope.py  errors.py  idempotency.py  producer.py  schema_files.py  schema_registry.py
event-bus-sdk/typescript/: README.md  eslint.config.mjs  jest.config.js  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
event-bus-sdk/typescript/scripts/: generate-payload-types.ts
event-bus-sdk/typescript/src/: admin.ts  config.ts  consumer.ts  dedup-store.ts  envelope.ts  errors.ts  idempotency.ts  index.ts  producer.ts  schema-files.ts  schema-registry.ts  trace-context.ts
event-bus-sdk/typescript/test/integration/: cross-language.test.ts  roundtrip.test.ts
event-bus-sdk/typescript/test/unit/: config.test.ts  cross-language-parity.ts  dedup-store.test.ts  envelope.test.ts  errors.test.ts  idempotency.test.ts  schema-files.test.ts  trace-context.test.ts
event-schema/: README.md  signal.tier-one.example-collector.schema.json
infra/terraform/: README.md
infra/terraform/environments/dev/: main.tf  terraform.tfvars  variables.tf
infra/terraform/environments/prod/: main.tf  terraform.tfvars  variables.tf
infra/terraform/modules/network/: main.tf
infra/terraform/modules/object-storage/: main.tf
infra/terraform/modules/postgres/: main.tf
infra/terraform/modules/secrets/: main.tf
observability/: README.md  __init__.py  decorators.py  logging.py  propagation.py  tracing.py
scoring-engine/: README.md
secrets/: README.md
signal-collector-framework/: README.md
tests/: __init__.py  conftest.py  test_data_model.py  test_reproducibility.py  test_smoke.py
tests/auth/: __init__.py  conftest.py  test_audit_sinks.py  test_fake_provider.py  test_integration_auth.py  test_passwords.py  test_rbac.py  test_tokens.py  test_totp.py
tests/event_bus/: __init__.py  conftest.py  test_config.py  test_dedup_store.py  test_envelope.py  test_idempotency.py  test_integration_roundtrip.py  test_schema_files.py  test_trace_context.py
tests/observability/: __init__.py  conftest.py  test_decorators.py  test_logging.py  test_propagation.py  test_tracing.py
tests/reproducibility/: __init__.py  conftest.py  expected_snapshot.json  snapshot.py  test_reproducibility.py
tests/smoke/: __init__.py  conftest.py  evidence_writer.py  test_annotation_propagation.py  test_smoke_roundtrip.py
