[project]
name = "trustlist-core"
version = "0.0.0"
description = "Canonical foundation monorepo for the TrustList ad-trust dataset: data model, event-bus SDKs, scoring-engine kernel, signal-collector framework and shared libraries."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "The TrustList Foundation" }]
dependencies = [
  "sqlalchemy>=2.0",
  "alembic>=1.14",
  "psycopg[binary]>=3.2",
  "opentelemetry-api>=1.27",
  "opentelemetry-sdk>=1.27",
  "opentelemetry-exporter-otlp>=1.27",
  "confluent-kafka[schemaregistry]>=2.5",
  "jsonschema>=4.20",
]

[dependency-groups]
dev = [
  "ruff>=0.8",
  "mypy>=1.13",
  "pytest>=8.3",
  "types-jsonschema>=4.20",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100
# The Alembic migrations/versions/ tree is excluded from linting. Future
# migrations are produced by `alembic revision --autogenerate` from a fixed
# template (script.py.mako) whose conditional import blocks and blank lines do
# not survive isort/format checks. The licence-header check skips the same
# directory (ci/check_license_headers.py SKIP_DIRS), so this is consistent with
# the existing project convention for machine-generated migration files. See
# data-model/README.md.
extend-exclude = ["data-model/migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.ruff.lint.isort]
# trustlist_data_model lives under data-model/ rather than the repo root, so
# ruff cannot infer it is first-party; declare it so import blocks sort it
# alongside the project's own modules.
known-first-party = ["trustlist_data_model", "trustlist_event_bus"]

[tool.mypy]
python_version = "3.12"
strict = true
# data-model carries the ORM models. The migrations/versions/ tree is excluded
# below: those files are machine-generated and strict-checking them is
# impractical (untyped Alembic op helpers, generated boilerplate). The migration
# logic that matters — the canonical schema — is the type-checked ORM models.
files = ["tests", "ci", "data-model", "observability", "event-bus-sdk"]
mypy_path = "data-model:event-bus-sdk"
exclude = ["data-model/migrations/versions/"]

[[tool.mypy.overrides]]
# env.py is Alembic-framework glue executed by Alembic's own runner, not part of
# the application's typed surface; the alembic.context API is loosely typed.
module = "env"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["data-model", "event-bus-sdk"]
markers = [
  "integration: tests requiring real backing services (Postgres, RedPanda) — see docker-compose.dev.yml",
]
